--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "node-red-contrib-i2clcd-alt",
-  "version": "0.0.2",
+  "version": "2.0.0",
   "description": "A node-red node that outputs to a 1602/2004 i2c LCD",
   "dependencies": {
-    "i2c-bus": "^5.2.0",
-    "sleep": "^6.3.0"
+    "i2c-bus": "^5.2.0"
   },
   "keywords": [
     "node-red",
