--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "2.0.0",
   "description": "A node-red node that outputs to a 1602/2004 i2c LCD",
   "dependencies": {
-    "i2c-bus": "^5.2.0",
-    "system-sleep": "^1.3.6"
+    "i2c-bus": "^5.2.0"
   },
   "keywords": [
     "node-red",
